Fix Bug 1466834 - Rename or merge HTML5 section on Firefox release notes

--- a/media/css/firefox/releasenotes-firefox.less
+++ b/media/css/firefox/releasenotes-firefox.less
@@ -340,7 +340,7 @@ ul.section-items {
     font-family: 'Font Awesome';
     margin-right: .2em;
 }
-#html5 h4:before {
+#web-platform h4:before {
     content: '\00A0\f121\00A0';
     font-family: 'Font Awesome';
     margin-right: .2em;
